[gd_scene load_steps=4 format=3 uid="uid://b7xxari67wnwx"]

[ext_resource type="Script" path="res://Scripts/attack_dagger.gd" id="1_20408"]
[ext_resource type="Texture2D" uid="uid://cmikcg01adx0j" path="res://Arte/dagger.png" id="2_pphqu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nebor"]
radius = 3.0
height = 12.0

[node name="AttackDagger" type="Node2D"]
script = ExtResource("1_20408")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nebor")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_pphqu")

[node name="TimerDeath" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[node name="TimerCooldown" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TimerDeath" to="." method="_on_timer_death_timeout"]
